feat: all funções utils

--- a/home/home.html
+++ b/home/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home- CineMania</title>
     <link rel="stylesheet" href="./assets/css/styleHome.css">
-    <link rel="stylesheet" href="../navbar/assets//css/style.css">
+    <link rel="stylesheet" href="../header/assets//css/style.css">
 </head>
 <body>
     <nav>
@@ -16,7 +16,6 @@
 
     <div class="container">
         <h2>Home</h2>
-
         <div id="categories" class="categories">
             <div id="category" class="category">
                 <!-- Aqui seram montadas as categorias de seus respctivos sliders de filmes -->
@@ -24,19 +23,14 @@
         </div> 
     
         <div class="preference-categories"></div> <!-- vamos colocar as preferencias de categorias do usuário-->
-
-        <div class="popular-movies">
-            <h3>Filmes populares</h3>
-        </div>  <!--http://api.themoviedb.org/3/movie/popular?language=pt-BR&api_key=5d3740a5fc6dfa4e862bede23e6d4fdb -->
+        <div class="popular-movies"></div>  <!--http://api.themoviedb.org/3/movie/popular?language=pt-BR&api_key=5d3740a5fc6dfa4e862bede23e6d4fdb -->
         <div class="popular-series"></div>  <!-- https://api.themoviedb.org/3/tv/popular?language=pt-BR&api_key=5d3740a5fc6dfa4e862bede23e6d4fdb -->
         <div class="featured-movies"></div>  <!-- https://api.themoviedb.org/3/movie/top_rated?language=pt-BR&api_key=5d3740a5fc6dfa4e862bede23e6d4fdb -->
         <div class="featured-series"></div>  <!-- https://api.themoviedb.org/3/tv/top_rated?language=pt-BR&api_key=5d3740a5fc6dfa4e862bede23e6d4fdb -->
 
     </div>
     <!-- <script src="./assets/script/script.js"></script>  -->
-    <script src="../navbar/assets/script/navbar.js"></script>
-    <script src="../navbar/assets/script/search.js"></script>
-    <script src="./assets/script/getIdsPreferences.js"></script>
-    <script src="../home/assets/script/popularMovies.js"></script>
+    <script src="../header/assets/script/navbar.js"></script>
+    <script src="../home/assets/script/gennerateSections.js"></script>
 </body>
 </html>
