Lidando com o envio de ids pela url

--- a/home/home.html
+++ b/home/home.html
@@ -29,8 +29,9 @@
         <div class="featured-series"></div>  <!-- https://api.themoviedb.org/3/tv/top_rated?language=pt-BR&api_key=5d3740a5fc6dfa4e862bede23e6d4fdb -->
 
     </div>
-    <!-- <script src="./assets/script/script.js"></script>  -->
-    <script src="../header/assets/script/navbar.js"></script>
+    
+    <script src="./assets/script/script.js"></script> 
+    <script src="../navbar/assets/script/navbar.js"></script>
     <script src="../home/assets/script/gennerateSections.js"></script>
 </body>
 </html>
