--- a/contact/index.html
+++ b/contact/index.html
@@ -8,15 +8,18 @@
     <link rel="stylesheet" href="../navbar/assets/css/style.css">
 </head>
 <body>
-    <nav>
+    <div class="navbar-container">
+         <nav>
         <ul id="navbar">
             <!-- Navbar -->
         </ul>
       </nav>
-    <main class="conteiner">
+    </div>
+   
+      <main class="conteiner">
         <div class="div-form">
        
-            <form action="https://formsubmit.co/fjoao3756@gmail.com" id="formulario" method="post">
+            <form action="https://formsubmit.co/joao.filho@somosicev.com" id="formulario" method="POST">
 
                 <h1>Contato</h1>
 
@@ -24,13 +27,13 @@
                 <input type="text" placeholder="Digite seu nome completo"name="nome" id="input-nome" class="campo" required>
 
                 <label for="input-email">Email: </label>
-                <input type="email" placeholder="Digite seu e-mail" id="input-email" name="email" class="campo" required>
+                <input type="email" placeholder="Digite seu e-mail" id="input-email" name="email" class="campo" required
 
-                <label for="input-assunto" name="assunto">Assunto: </label>
-                <input type="text" placeholder="Digite o assunto" id="input-assunto" class="campo" required>
+                <label for="input-assunto">Assunto: </label>
+                <input type="text" placeholder="Digite o assunto" name="assunto" id="input-assunto" class="campo" required>
 
-                <label for="mensagem" name="mensagem">Mensagem: </label>
-                <textarea id="mensagem" class="campo" placeholder="Sua mensagem..." required></textarea>
+                <label for="mensagem" >Mensagem: </label>
+                <textarea id="mensagem" class="campo" placeholder="Sua mensagem..." required name="mensagem"></textarea>
 
                 <div class="espaco"></div>
                 <input type="submit" value="Enviar" class="submit">
