--- a/filterMidias/filtro.html
+++ b/filterMidias/filtro.html
@@ -4,7 +4,8 @@
  <title>Discover - CineMania</title>
  <link rel="stylesheet" href="assets/css/filtro.css">
  <link rel="stylesheet" href="assets/css/stylecardmovie.css">
- <link rel="stylesheet" href="../header/assets/css/style.css">
+ <!-- <link rel="stylesheet" href="../header/assets/css/style.css"> -->
+ <link rel="stylesheet" href="../../navbar/assets/css/style.css">
 </head>
 <body>
   <nav>
