--- a/home/home.html
+++ b/home/home.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home- CineMania</title>
     <link rel="stylesheet" href="./assets/css/styleHome.css">
-    <link rel="stylesheet" href="../header/assets//css/style.css">
+    <!-- <link rel="stylesheet" href="../header/assets//css/style.css"> -->
+    <link rel="stylesheet" href="../../navbar/assets/css/style.css">
 </head>
 <body>
     <nav>
