--- a/results/search.html
+++ b/results/search.html
@@ -5,6 +5,7 @@
  <link rel="stylesheet" href="./assets/css/filtro.css">
  <link rel="stylesheet" href="./assets/css/stylecardmovie.css">
  <link rel="stylesheet" href="./assets/css/styles.css">
+ <link rel="stylesheet" href="../../navbar/assets/css/style.css">
 </head>
 <body>
   <nav>
