--- a/loginAndRegister/index.html
+++ b/loginAndRegister/index.html
@@ -16,7 +16,7 @@
       <input type="text" placeholder="Nome de Usuário *" required/>
       <input type="email" placeholder="Email *" required/>
       <input type="password" placeholder="Senha *" required/>
-      <a class="btn" href="../home/home.html">
+      <a class="btn" href="../preferences/index.html">
         <span></span>
         <span></span>
         <span></span>
@@ -29,7 +29,7 @@
       <h2></i>Login</h2>
       <input type="text" placeholder="Usuário" required />
       <input type="password" placeholder="Senha" required/>
-      <a class="btn" href="../home/home.html">
+      <a class="btn" href="../preferences/index.html">
         <span></span>
         <span></span>
         <span></span>
