Fazendo a tela de lançamentos

--- a/lancamentos/html/lancamentos.html
+++ b/lancamentos/html/lancamentos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lançamentos</title>
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../../navbar/assets/css/style.css">
 </head>
@@ -13,6 +13,23 @@
             <!-- Navbar -->
         </ul>
     </nav>
+
+    <div id="lancamentos">
+        <div id="audio">
+            <audio controls>
+                <source src="/lancamentos/assets/audio/ai cachorro-funk tik tok.mp3" type="audio/mpeg">
+                Seu navegador não suporta a reprodução de áudio.
+              </audio>
+        </div>
+    
+        <div id="video">
+            <video controls width="640" height="360">
+                <source src="/lancamentos/assets/video/videoplayback.mp4" type="video/mp4">
+                Seu navegador não suporta a reprodução de vídeo.
+            </video>
+        </div>
+    </div>
+      
 
 
     <script src="../../navbar/assets/script/navbar.js"></script>">
