--- a/preferences/index.html
+++ b/preferences/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categorias</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="../../navbar/assets/css/style.css">
 </head>
 <body>
     
