--- a/contact/index.html
+++ b/contact/index.html
@@ -27,7 +27,7 @@
                 <input type="text" placeholder="Digite seu nome completo"name="nome" id="input-nome" class="campo" required>
 
                 <label for="input-email">Email: </label>
-                <input type="email" placeholder="Digite seu e-mail" id="input-email" name="email" class="campo" required
+                <input type="email" placeholder="Digite seu e-mail" id="input-email" name="email" class="campo" required>
 
                 <label for="input-assunto">Assunto: </label>
                 <input type="text" placeholder="Digite o assunto" name="assunto" id="input-assunto" class="campo" required>
