--- a/contact/index.html
+++ b/contact/index.html
@@ -6,6 +6,7 @@
     <title>Contato</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../navbar/assets/css/style.css">
+    <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
     <div class="navbar-container">
@@ -40,6 +41,11 @@
             </form>
         </div> 
     </main>
+
+    <footer class="footer">
+        ©2024 SmartProgSolution. All rights reserved.
+    </footer>
+
     <script src="navbar.js"></script>
 </body>
 </html>
