--- a/detailsMovie/detailMovie.html
+++ b/detailsMovie/detailMovie.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/detalhe.css">
     <!-- <link rel="stylesheet" href="../header/assets/css/style.css"> -->
     <link rel="stylesheet" href="../../navbar/assets/css/style.css">
+    <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
     <nav>
@@ -18,6 +19,11 @@
     <div id="movieDetails">
         <!-- Os detalhes do filme serão inseridos aqui -->
     </div>
+
+    <footer class="footer">
+        ©2024 SmartProgSolution. All rights reserved.
+    </footer>
+
     <script src="assets/script/detalhes.js"></script>
     <script src="../header/assets/script/navbar.js"></script>
 </body>
