--- a/filterMidias/filtro.html
+++ b/filterMidias/filtro.html
@@ -6,6 +6,7 @@
  <link rel="stylesheet" href="assets/css/stylecardmovie.css">
  <!-- <link rel="stylesheet" href="../header/assets/css/style.css"> -->
  <link rel="stylesheet" href="../navbar/assets/css/style.css">
+ <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
   <nav>
@@ -39,7 +40,9 @@
   </section>
 
 
-
+  <footer class="footer">
+    ©2024 SmartProgSolution. All rights reserved.
+  </footer>
 
   <script src="assets/script/main.js"></script>
   <script src="../navbar/assets/script/navbar.js"></script>
