--- a/lancamentos/html/lancamentos.html
+++ b/lancamentos/html/lancamentos.html
@@ -6,6 +6,7 @@
     <title>Lançamentos</title>
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../../navbar/assets/css/style.css">
+    <link rel="stylesheet" href="../../footer/style.css">
 </head>
 <body>
     <nav>
@@ -30,7 +31,9 @@
         </div>
     </div>
       
-
+    <footer class="footer">
+        ©2024 SmartProgSolution. All rights reserved.
+    </footer>
 
     <script src="../../navbar/assets/script/navbar.js"></script>">
 </body>
