--- a/preferences/index.html
+++ b/preferences/index.html
@@ -6,6 +6,7 @@
     <title>Categorias</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="../../navbar/assets/css/style.css">
+    <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
     
@@ -22,6 +23,11 @@
     <form action="../home/home.html" method="get" id="formPreferencia">
         <!-- Categorias -->
     </form>
+
+
+    <footer class="footer">
+        ©2024 SmartProgSolution. All rights reserved.
+    </footer>
 
     <script src="./assets/js/main.js"></script>
     <script src="../navbar/assets/script/navbar.js"></script>
