--- a/results/search.html
+++ b/results/search.html
@@ -6,6 +6,7 @@
  <link rel="stylesheet" href="./assets/css/stylecardmovie.css">
  <link rel="stylesheet" href="./assets/css/styles.css">
  <link rel="stylesheet" href="../../navbar/assets/css/style.css">
+ <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
   <nav>
@@ -18,6 +19,10 @@
     <h1>Resultados</h1>
     <div id="movie-cards" class="movie-cards"></div>
   </div>
+
+  <footer class="footer">
+    ©2024 SmartProgSolution. All rights reserved.
+  </footer>
 
   <script src="../navbar/assets/script/search.js"></script>
   <script src="../navbar/assets/script/navbar.js"></script>
