--- a/loginAndRegister/index.html
+++ b/loginAndRegister/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina de Login</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body style="display:flex; align-items:center; justify-content:center;">
 <div class="login-page">
@@ -40,6 +41,11 @@
     </form>
   </div>
 </div>
+
+<footer class="footer">
+  ©2024 SmartProgSolution. All rights reserved.
+</footer>
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="main.js"></script>
 </body>
