--- a/moviesForCategories/catg.html
+++ b/moviesForCategories/catg.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/stylecatg.css">
     <!-- <link rel="stylesheet" href="../header/assets/css/style.css"> -->
     <link rel="stylesheet" href="../../navbar/assets/css/style.css">
+    <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
 
@@ -27,6 +28,11 @@
         </div>
 
     </div>
+
+    <footer class="footer">
+        ©2024 SmartProgSolution. All rights reserved.
+    </footer>
+
     <script src="./assets/script/script.js"></script>
     <script src="../navbar/assets/script/navbar.js"></script>
 </body>
