feat: criar toggle para page de results

--- a/filterMidias/filtro.html
+++ b/filterMidias/filtro.html
@@ -15,15 +15,17 @@
   </nav>
   
   <section class="content">
-    <div class="input-container">
+    <!-- <div class="input-container">
       <input type="text" id="searchInput" placeholder="Pesquisar filme...">
       <button id="searchButton">Pesquisar</button>
-    </div>
+    </div> -->
     <div class="filters">
+      
       <select id="genreFilter">
         <option value="">Selecione o gênero</option>
         <!-- Opções de gênero serão preenchidas dinamicamente -->
       </select>
+
       <select id="streamingTypeFilter">
         <option value="">Selecione o tipo de streaming</option>
         <option value="movie">Filme</option>
@@ -43,5 +45,6 @@
 
   <script src="assets/script/main.js"></script>
   <script src="../navbar/assets/script/navbar.js"></script>
+  <scrip src="../filterMidias/assets/script/filter.js"></scrip>
 </body>
 </html>
