--- a/footer/index.html
+++ b/footer/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <footer class="footer">
-        ©2024 CineMania. All rights reserved.
-    </footer>
+    <body>
+        <div id="wrapper">
+           <header>
+             <!-- Conteúdo do cabeçalho -->
+           </header>
+           <div id="body">
+             <!-- Conteúdo principal da página -->
+           </div>
+           <footer>
+             <p>Footer</p>
+           </footer>
+        </div>
+       </body>
 </body>
 </html>
