--- a/lancamentos/html/lancamentos.html
+++ b/lancamentos/html/lancamentos.html
@@ -35,6 +35,6 @@
         ©2024 SmartProgSolution. All rights reserved.
     </footer>
 
-    <script src="../../navbar/assets/script/navbar.js"></script>">
+    <script src="../../navbar/assets/script/navbar.js"></script>
 </body>
 </html>
