alteração do video

--- a/lancamentos/html/lancamentos.html
+++ b/lancamentos/html/lancamentos.html
@@ -25,7 +25,7 @@
     
         <div id="video">
             <video controls width="640" height="360">
-                <source src="/lancamentos/assets/video/videoplayback.mp4" type="video/mp4">
+                <source src="\lancamentos\assets\video\Divertidamente2.mp4" type="video/mp4">
                 Seu navegador não suporta a reprodução de vídeo.
             </video>
         </div>
