Refatoração do CSS

--- a/lancamentos/html/lancamentos.html
+++ b/lancamentos/html/lancamentos.html
@@ -14,20 +14,19 @@
             <!-- Navbar -->
         </ul>
     </nav>
-
+    <h1>Trailer do Filme Divertidamente 2</h1>
     <div id="lancamentos">
-        <div id="audio">
-            <audio controls>
-                <source src="/lancamentos/assets/audio/ai cachorro-funk tik tok.mp3" type="audio/mpeg">
-                Seu navegador não suporta a reprodução de áudio.
-              </audio>
-        </div>
-    
         <div id="video">
             <video controls width="640" height="360">
                 <source src="\lancamentos\assets\video\Divertidamente2.mp4" type="video/mp4">
                 Seu navegador não suporta a reprodução de vídeo.
             </video>
+        </div>
+        <div id="audio">
+            <audio controls>
+                <source src="/lancamentos/assets/audio/ai cachorro-funk tik tok.mp3" type="audio/mpeg">
+                Seu navegador não suporta a reprodução de áudio.
+              </audio>
         </div>
     </div>
       
