feat: criar filtros genre and year

--- a/filterMidias/filtro.html
+++ b/filterMidias/filtro.html
@@ -33,6 +33,7 @@
         <option value="tv">Série</option>
       </select>
       <input type="number" id="yearFilter" placeholder="Ano de lançamento">
+      <button id="filterButton">Filtrar</button>
     </div>
 
     <div class="container">
