--- a/contact/index.html
+++ b/contact/index.html
@@ -20,12 +20,12 @@
       <main class="conteiner">
         <div class="div-form">
        
-            <form action="https://formsubmit.co/joao.filho@somosicev.com" id="formulario" method="POST">
+            <form action="https://formspree.io/f/mjvnjlld" id="formulario" method="POST">
 
                 <h1>Contato</h1>
 
                 <label for="input-nome">Nome Completo: </label>
-                <input type="text" placeholder="Digite seu nome completo"name="nome" id="input-nome" class="campo" required>
+                <input type="text" placeholder="Digite seu nome completo" name="nome" id="input-nome" class="campo" required>
 
                 <label for="input-email">Email: </label>
                 <input type="email" placeholder="Digite seu e-mail" id="input-email" name="email" class="campo" required>
