docs: adicionar midias para documetação do README github

--- a/filterMidias/filtro.html
+++ b/filterMidias/filtro.html
@@ -9,11 +9,11 @@
  <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
-  <nav>
-    <ul id="navbar">
+  <header>
+        <ul id="navbar">
         <!-- Navbar -->
     </ul>
-  </nav>
+  </header>
   
   <section class="content">
     <!-- <div class="input-container">
