--- a/home/home.html
+++ b/home/home.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
-    <nav>
+    <header>
         <ul id="navbar">
             <!-- Navbar -->
-        </ul>
-    </nav>
+        </ul> 
+    </header>
 
     <div class="container">
         <!-- <h2>Home</h2> -->
