--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="refresh" content="0; url=./loginAndRegister/index.html" />
 </head>
 <body>
+    <!-- essa pag é so pq eu coloquei no github pages, pfvr não mexam  -->
     <p>redirecionamento, Aguarde...</p>
 </body>
 </html>
