--- a/loginAndRegister/index.html
+++ b/loginAndRegister/index.html
@@ -9,38 +9,45 @@
     <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body style="display:flex; align-items:center; justify-content:center;">
-<div class="login-page">
-  <div class="form">
-    <form class="register-form" method="POST">
-      <h2>Cadastro</h2>
-      <input type="text" placeholder="Nome Completo *" required/>
-      <input type="text" placeholder="Nome de Usuário *" required/>
-      <input type="email" placeholder="Email *" required/>
-      <input type="password" placeholder="Senha *" required/>
-      <a class="btn" href="../preferences/index.html">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        Criar Conta
-      </a>
-      <p class="message">Já tem uma conta? <a href="#">Login</a></p>
-    </form>
-    <form class="login-form" method="post">
-      <h2></i>Login</h2>
-      <input type="text" placeholder="Usuário" required />
-      <input type="password" placeholder="Senha" required/>
-      <a class="btn" href="../preferences/index.html">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        Entrar
-      </a>
-      <p class="message">Não registrado? <a href="#">Crie sua conta</a></p>
-    </form>
-  </div>
-</div>
+  <header>
+    <ul id="fdgdfd">
+        <!-- Navbar importada -->
+    </ul>
+  <section>
+    <div class="login-page">
+      <div class="form">
+        <form class="register-form" method="POST">
+          <h2>Cadastro</h2>
+          <input type="text" placeholder="Nome Completo *" required/>
+          <input type="text" placeholder="Nome de Usuário *" required/>
+          <input type="email" placeholder="Email *" required/>
+          <input type="password" placeholder="Senha *" required/>
+          <a class="btn" href="../preferences/index.html">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Criar Conta
+          </a>
+          <p class="message">Já tem uma conta? <a href="#">Login</a></p>
+        </form>
+        <form class="login-form" method="post">
+          <h2></i>Login</h2>
+          <input type="text" placeholder="Usuário" required />
+          <input type="password" placeholder="Senha" required/>
+          <a class="btn" href="../preferences/index.html">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Entrar
+          </a>
+          <p class="message">Não registrado? <a href="#">Crie sua conta</a></p>
+        </form>
+      </div>
+    </div>
+  </section>
+
 
 <footer class="footer">
   ©2024 SmartProgSolution. All rights reserved.
