--- a/preferences/index.html
+++ b/preferences/index.html
@@ -9,21 +9,18 @@
     <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
-    
-    <nav>
+    <header>
         <ul id="navbar">
             <!-- Navbar -->
         </ul>
-    </nav>
-
-    <header>
-        <h1>Escolha suas categorias:  </h1>
     </header>
 
-    <form action="../home/home.html" method="get" id="formPreferencia">
+    <section>
+        <h1>Escolha suas categorias:  </h1>
+        <form action="../home/home.html" method="get" id="formPreferencia">
         <!-- Categorias -->
-    </form>
-
+        </form>
+    </section>
 
     <footer class="footer">
         ©2024 SmartProgSolution. All rights reserved.
