--- a/results/search.html
+++ b/results/search.html
@@ -9,11 +9,12 @@
  <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
-  <nav>
+  <header>
     <ul id="navbar">
         <!-- Navbar -->
     </ul>
-  </nav>
+  </header>
+
 
   <div class="container">
     <h1>Resultados</h1>
