--- a/detailsMovie/detailMovie.html
+++ b/detailsMovie/detailMovie.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
-    <nav>
+    <header>
         <ul id="navbar">
             <!-- Navbar -->
         </ul>
-    </nav>
+    </header>
     
     <div id="movieDetails">
         <!-- Os detalhes do filme serão inseridos aqui -->
