--- a/lancamentos/html/lancamentos.html
+++ b/lancamentos/html/lancamentos.html
@@ -9,26 +9,30 @@
     <link rel="stylesheet" href="../../footer/style.css">
 </head>
 <body>
-    <nav>
+    <header>
         <ul id="navbar">
             <!-- Navbar -->
         </ul>
-    </nav>
-    <h1>Trailer do Filme Divertidamente 2</h1>
-    <div id="lancamentos">
-        <div id="video">
-            <video controls width="640" height="360">
-                <source src="\lancamentos\assets\video\Divertidamente2.mp4" type="video/mp4">
-                Seu navegador não suporta a reprodução de vídeo.
-            </video>
+    </header>
+
+    <section>
+        <h1>Trailer do Filme Divertidamente 2</h1>
+        <div id="lancamentos">
+            <div id="video">
+                <video controls width="640" height="360">
+                    <source src="\lancamentos\assets\video\Divertidamente2.mp4" type="video/mp4">
+                    Seu navegador não suporta a reprodução de vídeo.
+                </video>
+            </div>
+            <div id="audio">
+                <audio controls>
+                    <source src="/lancamentos/assets/audio/ai cachorro-funk tik tok.mp3" type="audio/mpeg">
+                    Seu navegador não suporta a reprodução de áudio.
+                </audio>
+            </div>
         </div>
-        <div id="audio">
-            <audio controls>
-                <source src="/lancamentos/assets/audio/ai cachorro-funk tik tok.mp3" type="audio/mpeg">
-                Seu navegador não suporta a reprodução de áudio.
-              </audio>
-        </div>
-    </div>
+    </section>
+
       
     <footer class="footer">
         ©2024 SmartProgSolution. All rights reserved.
