--- a/moviesForCategories/catg.html
+++ b/moviesForCategories/catg.html
@@ -10,12 +10,11 @@
     <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
-
-    <nav>
+    <header>
         <ul id="navbar">
             <!-- Navbar -->
-        </ul>
-    </nav>
+        </ul> 
+    </header>
 
     <div class="container">
         <h1>Categorias de Filmes</h1>
