--- a/home/home.html
+++ b/home/home.html
@@ -6,7 +6,7 @@
     <title>Home- CineMania</title>
     <link rel="stylesheet" href="./assets/css/styleHome.css">
     <!-- <link rel="stylesheet" href="../header/assets//css/style.css"> -->
-    <link rel="stylesheet" href="../../navbar/assets/css/style.css">
+    <link rel="stylesheet" href="https://smartprogsolutions.github.io/CineMania/navbar/assets/css/style.css">
     <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
