--- a/preferences/index.html
+++ b/preferences/index.html
@@ -17,7 +17,7 @@
 
     <section>
         <h1>Escolha suas categorias:  </h1>
-        <form action="../home/home.html" method="get" id="formPreferencia">
+        <form action="https://smartprogsolutions.github.io/CineMania/home/home.html" method="get" id="formPreferencia">
         <!-- Categorias -->
         </form>
     </section>
