--- a/preferences/index.html
+++ b/preferences/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categorias</title>
-    <link rel="stylesheet" href="./assets/css/styles.css">
-    <link rel="stylesheet" href="../../navbar/assets/css/style.css">
+    <!-- <link rel="stylesheet" href="./assets/css/styles.css"> -->
+    <link rel="stylesheet" href="../navbar/assets/css/style.css">
     <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
 
     <section>
         <h1>Escolha suas categorias:  </h1>
-        <form action="https://smartprogsolutions.github.io/CineMania/home/home.html" method="get" id="formPreferencia">
+        <form action="../home/home.html" method="get" id="formPreferencia">
         <!-- Categorias -->
         </form>
     </section>
