fix bug diretórios

--- a/preferences/index.html
+++ b/preferences/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categorias</title>
-    <!-- <link rel="stylesheet" href="./assets/css/styles.css"> -->
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="../navbar/assets/css/style.css">
     <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
+    <!-- commit atrasado teste  -->
+    <!-- Por favor Quando forem testar o site usem a guia anonima -->
+    <!-- Só pra evitar que o navegador guarde elementos do site  -->
     <header>
         <ul id="navbar">
             <!-- Navbar -->
