fix bug diretório

--- a/moviesForCategories/catg.html
+++ b/moviesForCategories/catg.html
@@ -6,7 +6,8 @@
     <title>Categorias de Filmes</title>
     <link rel="stylesheet" href="assets/css/stylecatg.css">
     <!-- <link rel="stylesheet" href="../header/assets/css/style.css"> -->
-    <link rel="stylesheet" href="../../navbar/assets/css/style.css">
+    <!-- <link rel="stylesheet" href="../../navbar/assets/css/style.css"> -->
+    <link rel="stylesheet" href="../navbar/assets/css/style.css">
     <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
