--- a/detailsMovie/detailMovie.html
+++ b/detailsMovie/detailMovie.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do Filme</title>
-    <link rel="stylesheet" href="assets/css/detalhe.css">
-    <!-- <link rel="stylesheet" href="../header/assets/css/style.css"> -->
-    <link rel="stylesheet" href="../../navbar/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/detalhe.css">
+    <link rel="stylesheet" href="../navbar/assets/css/style.css">
     <link rel="stylesheet" href="../footer/style.css">
 </head>
 <body>
